--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+example/Debug/*
+example/example.componentinfo.xml
+
+LCD_Nokia5110/Debug/*
+LCD_Nokia5110/LCD_Nokia5110.componentinfo.xml
